# glados-mcp

./: .gitignore  README.md  download_models.py  download_models.sh
.cursor/: mcp.json
glados-mcp/: README.md  pyproject.toml
glados-mcp/tts/: __init__.py  __main__.py  glados_manager.py  server.py
glados-mcp/tts/tts/: __init__.py  phonemizer.py  tts_glados.py  tts_kokoro.py
glados-mcp/tts/utils/: __init__.py  resources.py
