[project]
name = "glados-mcp"
version = "0.1.0"
description = "GLaDOS MCP Server - Snarky AI voice commentary for your development workflow"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GLaDOS MCP Team" }]
keywords = ["mcp", "tts", "text-to-speech", "glados", "ai-voice", "development", "commentary"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "anyio>=4.5", 
    "click>=8.1.0", 
    "mcp", 
    "numpy", 
    "sounddevice",
    "onnxruntime>=1.16.0",
    "pydantic>=2.10.6",
    "soundfile>=0.13.0"
]

[project.scripts]
glados-mcp = "tts.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tts"]

[tool.pyright]
include = ["tts"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"] 